# HRtoSQLite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: build-and-test.yml
HRtoSQLite/: CMakeLists.txt
HRtoSQLite.VS2015/: .gitignore  HRToSQLiteWS.sln
HRtoSQLite.VS2015/HRToSQLite/: HRToSQLite.vcxproj  HRToSQLite.vcxproj.filters
HRtoSQLite.VS2015/HRToSQLite_run/: HRToSQLite_run.vcxproj  HRToSQLite_run.vcxproj.filters
HRtoSQLite.VS2015/HRToSQLite_tests/: HRToSQLite_tests.vcxproj  HRToSQLite_tests.vcxproj.filters  packages.config
HRtoSQLite/src/: BreakingHandler.cpp  BreakingHandler.h  Common.h  ExportProcess.h  ExportrProcess.cpp  HRtoSQLiteApp.cpp  HRtoSQLiteApp.h  Interfaces.h  TableExporter.cpp  TableExporter.h
HRtoSQLite/src/Ora/: CheckForHR.cpp  Connection.cpp  Connection.h  Describer.cpp  Describer.h  Reader.cpp  Reader.h  Rowset.cpp  Rowset.h  Selector.cpp  Selector.h  Types.h  Utils.h  ocihwp.h
HRtoSQLite/src/Sqlt/: DbsWriter.cpp  DbsWriter.h  StmtFileParser.cpp  StmtFileParser.h  Transformation.cpp  Transformation.h
HRtoSQLite_run/: CMakeLists.txt
HRtoSQLite_run/src/: main.cpp
HRtoSQLite_tests/: CMakeLists.txt
HRtoSQLite_tests/g.tests/: CMakeLists.txt
HRtoSQLite_tests/g.tests/src/: .gitignore  Integral_Test.cpp  ParamsHandlingTest.cpp  TestCommon.h  main.cpp
HRtoSQLite_tests/g.tests/src/Ora/: ConnectionHelper.h  ConnectionTest.cpp  ReadingTest.cpp  SelectionSamples.cpp  SelectionTS.h  TestIfHRSchemaTest.cpp
HRtoSQLite_tests/g.tests/src/Sqlt/: SQLiteWritingTS.cpp
Launchers/: config.env  hr.db  startApp.sh  startApp_deb.sh  startApp_rel.sh  startSingleTest.sh  testLauncher.sh
dbs/: hr.db
sql/: hrSQLiteDDL.sql
